--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "bootstrap": "^5.1.1",
+    "chokidar": "^3.5.2",
+    "glob-parent": "^6.0.1",
+    "jquery": "^3.6.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "webpack-dev-server": "^4.2.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
